progress on header section

--- a/index.html
+++ b/index.html
@@ -6,23 +6,36 @@
     <script src="js/jquery-3.1.1.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
     <link rel="stylesheet" href="css/styles.css" media="screen">
-    <title>CrossRoads Coffee Cafe</title>
+    <title>Crossroads Coffee Cafe</title>
   </head>
   <body>
 
     <div class="nav-bar">
       <div class="nav-logo">
-        <img src="img/crossroadslogo2.png" class="crossroadslogo">
+        <img src="img/crossroadslogo3.png" class="crossroadslogo">
       </div>
       <div class="nav-links">
+        <div class="nav-home">HOME</div>
         <div class="nav-menu">MENU</div>
         <div class="nav-music">MUSIC</div>
         <div class="nav-contact">CONTACT</div>
       </div>
-    </div>
 
-    <div class="carousel">
-      
+      <div class="carousel">
+
+      </div>
+
+      <div class="reviews">
+        <div class="review-quote quote-1 active-rev">
+          "Excellent coffee. Great food and service. Comforting Christian environment."
+        </div>
+        <div class="review-quote quote-2">
+          "I choose Crossroads, over others, every time I can."
+        </div>
+        <div class="review-quote quote-3">
+          "Wonderful staff!"
+        </div>
+      </div>
     </div>
 
 
