--- a/index.html
+++ b/index.html
@@ -10,35 +10,22 @@
   </head>
   <body>
 
-    <div class="nav-bar">
-      <div class="nav-logo">
-        <img src="img/crossroadslogo3.png" class="crossroadslogo">
-      </div>
-      <div class="nav-links">
-        <div class="nav-home">HOME</div>
-        <div class="nav-menu">MENU</div>
-        <div class="nav-music">MUSIC</div>
-        <div class="nav-contact">CONTACT</div>
-      </div>
+  <div class="nav-logo">
+    <img src="img/crossroadslogo3.png" class="crossroadslogo">
+  </div>
 
-      <div class="carousel">
+  <div class="nav-links">
+    <div class="nav-home">HOME</div>
+    |
+    <div class="nav-menu">MENU</div>
+    |
+    <div class="nav-music">MUSIC</div>
+    |
+    <div class="nav-contact">CONTACT</div>
+  </div>
 
-      </div>
-
-      <div class="reviews">
-        <div class="review-quote quote-1 active-rev">
-          "Excellent coffee. Great food and service. Comforting Christian environment."
-        </div>
-        <div class="review-quote quote-2">
-          "I choose Crossroads, over others, every time I can."
-        </div>
-        <div class="review-quote quote-3">
-          "Wonderful staff!"
-        </div>
-      </div>
-    </div>
-
-
+  <div class="content">
+  </div>
 
   </body>
 </html>
