start a new layout for page

--- a/index.html
+++ b/index.html
@@ -10,51 +10,16 @@
   </head>
   <body>
 
-  <center>
-  <div class="nav-logo">
-    <img src="img/crossroadslogo3.png" class="crossroadslogo">
-  </div>
-  </center>
-
-  <div class="nav-links">
-    <div class="nav-home">HOME</div>
-    <div class="nav-menu">MENU</div>
-    <div class="nav-music">MUSIC</div>
-    <div class="nav-contact">CONTACT</div>
-  </div>
-
-  <div class="content">
-    <div class="home content-page active">
-      <div class="home-header">
-        WELCOME
-      </div>
-      <img src="img/outside.jpg" width="400px">
-      <div class="home-text">
-        Crossroads Coffee Cafe your home away from home!
-
-        Clean, casual, and conveniently located just off I-205
-        in Gladstone, exit 11 in the High Rocks neighborhood.
-
-        The atmosphere is "family-living-room" meets "Boardroom".
-
-        Our beautiful chairs, couches, and meeting areas are lush and "new"… come put your feet up and relax!
-
-        We invite you to allow our family to serve your family, guests, work or study group as you linger over fine coffee, and wonderful deli options.
-
-        The deli, as unique as each visitor, is prepared to serve wonderful healthy
-        (and hearty) options from vegetarian to meaty, from organic to "load 'er up" naughty!
-
-        We even serve sugar free pastries that’ll have you questioning whether they’re really sugar free.
-
-        Crossroads Coffee Café is set up with free WiFi, and
-        we offer live music (easy listening) on Friday and Saturday nights!
-      </div>
+  <div class="side-bar">
+    <div class="nav-logo">
+      <img src="img/crossroadslogo3.png" class="crossroadslogo">
     </div>
-    <div class="menu content-page">
-    </div>
-    <div class="contact content-page">
-    </div>
-    <div class="music content-page">
+
+    <div class="nav-links">
+      <div class="nav-home">HOME</div>
+      <div class="nav-menu">MENU</div>
+      <div class="nav-music">MUSIC</div>
+      <div class="nav-contact">CONTACT</div>
     </div>
   </div>
 
